--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "vietnam-queue",
-    "version": "0.0.1",
+    "version": "0.0.2",
+    "main": "test.js",
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
         "test": "jest"
@@ -14,5 +15,8 @@
     "license": "ISC",
     "bugs": {
         "url": "https://github.com/vuhoangha/simple-queue/issues"
+    },
+    "dependencies": {
+        "axios": "^0.18.0"
     }
 }
